crates/widgets/src/card/snapshots/widgets__card__tests__a_stalled_download_shows_buffering_in_the_status_column.snap
---
source: crates/widgets/src/card/mod.rs
expression: "rendered(60, card_height().0, |frame|\nframe.render_widget(&widget, frame.area())).to_string()"
---
"╭ Zefiro ──────────────────────────────────────────────────╮"
"│                                                          │"
"│      No cover      Moon River              ◌ Buffering   │"
"│                    Test Artist                           │"
"│                    00:30 / 04:05  » 1×                   │"
"│                                                          │"
"│                    ━━━━───────────────────────────────   │"
"│                    ⠀⠀⠀⠀⠀⠀⠀⠀⠀                             │"
"│                    ⣤⣤⣤⣤⢠⣤⣤⣤⡄                             │"
"│                    ⣿⣿⣿⣿⢸⣿⣿⣿⡇  ████████████████████████   │"
"│                                                          │"
"╰──────────────────────────────────────────────────────────╯"
