crates/widgets/src/card/snapshots/widgets__card__tests__the_now_playing_card_shows_title_status_and_meters.snap
---
source: crates/widgets/src/card/mod.rs
assertion_line: 605
expression: "painted(&widget, 60, height())"
---
"╭ Sifr ────────────────────────────────────────────────────╮"
"│                                                          │"
"│      No cover      Moon River                ▶ Playing   │"
"│                    Test Artist                           │"
"│                    00:30 / 04:05  » 1×                   │"
"│                                                          │"
"│                    ━━━━───────────────────────────────   │"
"│                    ⠀⠀⠀⠀⠀⠀⠀⠀⠀                             │"
"│                    ⣤⣤⣤⣤⢠⣤⣤⣤⡄                             │"
"│                    ⣿⣿⣿⣿⢸⣿⣿⣿⡇  ████████████████████████   │"
"│                                                          │"
"╰──────────────────────────────────────────────────────────╯"
